# mailing_with_python

./: .env  .gitignore  README.md  main.py  pyproject.toml
